--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               loading="lazy"
             />
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 my-5">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
               Meet new and interesting dogs nearby.
             </h1>
